# yd

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts  wdio.conf.ts
.claude/: settings.local.json
.github/workflows/: release.yml  update-ytdlp.yml
code-review/: 2026-03-25-review.md  changelog.md  summary.md
docs/plans/: 2026-03-12-yt-dlp-tauri-app-plan.md  2026-03-12-yt-dlp-tauri-app-todo.md  2026-03-16-update-system-plan.md  2026-03-16-update-system-todo.md  2026-03-18-improve-ui-plan.md  2026-03-18-improve-ui-todo.md  2026-03-18-performance-plan.md  2026-03-18-performance-todo.md  2026-03-22-yd-feature-roadmap.md  2026-03-23-id3-config.md  plan.md
e2e/: app.e2e.ts  helpers.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  download.rs  hebrew.rs  lib.rs  main.rs
src/components/: DownloadItem.tsx  DownloadList.tsx  PlaylistModal.tsx  SearchBar.tsx  Settings.tsx  UrlInput.tsx
src/lib/: i18n.tsx  tauri.ts  youtube.ts
src/tests/: App.test.tsx  setup.ts
src/tests/components/: DownloadItem.test.tsx  DownloadList.test.tsx  PlaylistModal.test.tsx  SearchBar.test.tsx  Settings.test.tsx  UrlInput.test.tsx
src/tests/lib/: i18n.test.ts  urlExtraction.test.ts  youtube.test.ts
