[package]
name = "yd"
version = "1.1.1"
description = "YouTube song downloader"
authors = ["ypreiser"]
edition = "2021"

[lib]
name = "yd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "process", "io-util"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

